[workspace]
members = [
    "crates/ade-graph",
    "crates/ade-strongly-connected-components",
    "crates/ade-topological-sort",
    "crates/ade-elementary-circuits",
    "crates/ade-graph-generators",
    "crates/ade-traits",
    "crates/ade-common",
]
resolver = "2"

[workspace.dependencies]
# Shared dependencies across all crates
criterion = { version = "0.7", features = ["html_reports"] }
