[package]
name = "ade-graph"
version = "0.1.0"
edition = "2021"
description = "Core graph data structures and utilities for directed graphs."
license = "MIT OR Apache-2.0"
repository = "https://github.com/riccardoscalco/ade"
homepage = "https://github.com/riccardoscalco/ade"
keywords = ["graph", "directed", "data-structures", "algorithms", "graph-theory"]
categories = ["data-structures", "algorithms", "science::mathematics"]

[dependencies]
fixedbitset = "0.4"
ade-traits = { path = "../ade-traits" }
