[package]
name = "ade-topological-sort"
version = "0.1.0"
edition = "2021"
description = "Topological sorting algorithm for directed graphs."
license = "MIT OR Apache-2.0"
repository = "https://github.com/riccardoscalco/ade"
homepage = "https://github.com/riccardoscalco/ade"
keywords = ["graph", "topological-sort", "algorithm", "directed", "sorting"]
categories = ["algorithms", "science::mathematics"]

[dependencies]
ade-traits = { path = "../ade-traits", version = "0.1.0" }
ade-common = { path = "../ade-common", version = "0.1.0" }
fixedbitset = "0.4"

[dev-dependencies]
ade-graph = { path = "../ade-graph" }
ade-graph-generators = { path = "../ade-graph-generators" }
ade-common = { path = "../ade-common", features = ["test-helpers"] }
criterion = { workspace = true }
rand = "0.8"

[[bench]]
name = "topological_sort_bench"
harness = false
