[package]
name = "ade-traits"
version = "0.1.0"
edition = "2021"
description = "Common traits for graph nodes, edges, and graph views for ADE graph crates."
license = "MIT OR Apache-2.0"
repository = "https://github.com/riccardoscalco/ade"
homepage = "https://github.com/riccardoscalco/ade"
keywords = ["graph", "traits", "interfaces", "common", "directed"]
categories = []
